--- a/inst/markdown/04.snowcrab_fishery_model_turing.md
+++ b/inst/markdown/04.snowcrab_fishery_model_turing.md
@@ -85,17 +85,20 @@ There are two ways you can use this.
   yrs = 1999:year_assessment
 
   rootdir = homedir()
+
+  # choose location of source code
   project_directory = joinpath( rootdir, "bio", "bio.snowcrab", "inst", "julia" ) 
+  project_directory = joinpath( rootdir, "projects", "bio.snowcrab", "inst", "julia" ) 
+  project_directory = joinpath( rootdir, "projects", "dynamical_model", "snowcrab" ) 
+
+
   bio_data_directory = joinpath( rootdir, "bio.data", "bio.snowcrab", "modelled", "default_fb", "fishery_model_results", "turing1"  )
+  
   outputs_directory = joinpath( rootdir, "bio.data", "bio.snowcrab", "fishery_model" ) 
  
   model_variation = "logistic_discrete_historical"   
   model_outdir = joinpath( outputs_directory, string(year_assessment), model_variation )
-
-  # choose:
-  aulab ="cfanorth"     # 41 hrs (size struct), 20 min (logistic_discrete_hist)
-  aulab ="cfasouth"     # 65 hrs (size struct), min (logistic_discrete_hist)  
-  aulab ="cfa4x"        # 24 hrs (size struct), min (logistic_discrete_hist)
+ 
 
   include( joinpath(project_directory, "snowcrab_startup.jl" ) )  # load libs
   include( joinpath(project_directory, "logistic_discrete_functions.jl" ) )  # load core modelling functions
@@ -103,7 +106,16 @@ There are two ways you can use this.
   o = load( joinpath( bio_data_directory, "biodyn_biomass.RData" ), convert=true)   # load data; alter file path as required   
 
   # run the whole script or in parts inside "bio.snowcrab/inst/julia/logistic_discrete.jl" for more control
+  
+  aulab ="cfanorth"     # 41 hrs (size struct), 20 min 
   include( joinpath(project_directory, "logistic_discrete.jl" ) )   
+
+  aulab ="cfasouth"     # 65 hrs (size struct), min (logistic_discrete_hist)  
+  include( joinpath(project_directory, "logistic_discrete.jl" ) )   
+
+  aulab ="cfa4x"        # 24 hrs (size struct), min (logistic_discrete_hist)
+  include( joinpath(project_directory, "logistic_discrete.jl" ) )   
+
 
 ```
 
