--- a/inst/markdown/03.biomass_index_carstm.md
+++ b/inst/markdown/03.biomass_index_carstm.md
@@ -19,11 +19,17 @@ format:
 
    
 <!-- Preamble
-
-This is a Markdown document designed to be viewed by a web browser. 
-
-We do not convert to a Quarto/Rmarkdown report as the step involved are complex and may require tweaking. 
  
+This is a Markdown document ... To create HTML or PDF, etc, run: 
+
+  make quarto FN=03.biomass_index_carstm YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/reports # {via Quarto}
+
+  make rmarkdown FN=03.biomass_index_carstm YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/reports {via Rmarkdown}
+
+  make pdf FN=03.biomass_index_carstm  # {via pandoc}
+
+Alter year and directories to reflect setup or copy Makefile and alter defaults to your needs.
+  
 -->
 
  
@@ -251,8 +257,6 @@ Each variable is modelled with the same covariates.
       if ( vns=="number" ) {
         p=pN
         ylab = "Number"
-        outputdir = file.path( p$modeldir, p$carstm_model_label, "predicted.numerical.densities" )
-        if ( !file.exists(outputdir)) dir.create( outputdir, recursive=TRUE, showWarnings=FALSE )
         fn_root_prefix = "Predicted_numerical_abundance"
         fn_root =  "Predicted_numerical_abundance_persistent_spatial_effect" 
         outfilename = file.path( outputdir, paste(fn_root, "png", sep=".") )
@@ -261,8 +265,6 @@ Each variable is modelled with the same covariates.
       if ( vns=="meansize") {
         p=pW
         ylab = "Mean weight"
-        outputdir = file.path( p$modeldir, p$carstm_model_label, "predicted.meansize" )
-        if ( !file.exists(outputdir)) dir.create( outputdir, recursive=TRUE, showWarnings=FALSE )
         fn_root_prefix = "Predicted_meansize"
         fn_root =  "Predicted_meansize_persistent_spatial_effect" 
         outfilename = file.path( outputdir, paste(fn_root, "png", sep=".") )
@@ -271,13 +273,16 @@ Each variable is modelled with the same covariates.
       if ( vns=="habitat" ) {
         p=pH
         ylab = "Probability"
-        outputdir = file.path( p$modeldir, p$carstm_model_label, "predicted.presence_absence" )
-        if ( !file.exists(outputdir)) dir.create( outputdir, recursive=TRUE, showWarnings=FALSE )
         fn_root_prefix = "Predicted_presence_absence"
         fn_root =  "Predicted_presence_absence_persistent_spatial_effect" 
         outfilename = file.path( outputdir, paste(fn_root, "png", sep=".") )
         title= paste( snowcrab_filter_class, "Probability")  
       }
+
+      outputdir = file.path( p$modeldir, p$carstm_model_label, "figures" )
+      if ( !file.exists(outputdir)) dir.create( outputdir, recursive=TRUE, showWarnings=FALSE )
+
+
           #   # to compute habitat prob
           #   sims = carstm_posterior_simulations( pH=pH, pa_threshold=0.05, qmax=0.95 )
           #   SM = aggregate_simulations( 
@@ -303,19 +308,17 @@ Each variable is modelled with the same covariates.
       res = NULL; gc()
 
 
-      # plots with 95% PI
-      oeffdir = file.path( outputdir, fn_root_prefix, "effects" )
-      
-      carstm_plot_marginaleffects( p, oeffdir, fn_root ) 
+      # plots with 95% PI 
+      carstm_plot_marginaleffects( p, outputdir, fn_root ) 
    
 
       # maps of some of the results
-      outputdir = file.path(p$data_root, p$carstm_model_label, "maps" )
+      outputdirmap = file.path(p$modeldir, p$carstm_model_label, "maps" )
        
-      carstm_plot_map( p=p, outputdir=outputdir, fn_root_prefix=fn_root_prefix , additional_features=additional_features, 
+      carstm_plot_map( p=p, outputdir=outputdirmap, fn_root_prefix=fn_root_prefix , additional_features=additional_features, 
         toplot="random_spatial", probs=c(0.025, 0.975) ) 
    
-      carstm_plot_map( p=p, outputdir=outputdir, fn_root_prefix=fn_root_prefix , additional_features=additional_features, 
+      carstm_plot_map( p=p, outputdir=outputdirmap, fn_root_prefix=fn_root_prefix , additional_features=additional_features, 
         toplot="predictions", probs=c(0.1, 0.9)) 
   
   }
