--- a/inst/markdown/04.snowcrab_fishery_model_turing.md
+++ b/inst/markdown/04.snowcrab_fishery_model_turing.md
@@ -6,11 +6,15 @@ number-sections: true
 highlight-style: pygments
 editor:
   render-on-save: false
+  markdown:
+    references:
+      location: document
 format:
   html: 
     code-fold: true
     html-math-method: katex
     self-contained: true
+    embed-resources: true
   pdf:
     pdf-engine: lualatex
   docx: default 
@@ -19,11 +23,19 @@ format:
    
 <!-- Preamble
 
-This is a Markdown document designed to be viewed by a web browser. 
 
-make html FN=04.snowcrab_fishery_model_turing
+This is a Markdown document ... To create HTML or PDF, etc, run: 
 
-TODO: convert to Quarto
+
+  make quarto FN=04.snowcrab_fishery_model_turing YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/reports # {via Quarto}
+
+  make rmarkdown FN=04.snowcrab_fishery_model_turing YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/reports {via Rmarkdown}
+
+  make pdf FN=04.snowcrab_fishery_model_turing  # {via pandoc}
+
+
+Alter year and directories to reflect setup or copy Makefile and alter defaults to your needs.
+  
  
 -->
 
@@ -87,33 +99,29 @@ There are two ways you can use this.
   rootdir = homedir()
 
   # choose location of source code
-  project_directory = joinpath( rootdir, "bio", "bio.snowcrab", "inst", "julia" ) 
+  # project_directory = joinpath( rootdir, "bio", "bio.snowcrab", "inst", "julia" ) 
   project_directory = joinpath( rootdir, "projects", "bio.snowcrab", "inst", "julia" ) 
-  project_directory = joinpath( rootdir, "projects", "dynamical_model", "snowcrab" ) 
-
-
+ 
   bio_data_directory = joinpath( rootdir, "bio.data", "bio.snowcrab", "modelled", "default_fb", "fishery_model_results", "turing1"  )
   
   outputs_directory = joinpath( rootdir, "bio.data", "bio.snowcrab", "fishery_model" ) 
  
   model_variation = "logistic_discrete_historical"   
   model_outdir = joinpath( outputs_directory, string(year_assessment), model_variation )
- 
-
+  
   include( joinpath(project_directory, "snowcrab_startup.jl" ) )  # load libs
   include( joinpath(project_directory, "logistic_discrete_functions.jl" ) )  # load core modelling functions
-
+ 
   o = load( joinpath( bio_data_directory, "biodyn_biomass.RData" ), convert=true)   # load data; alter file path as required   
-
+ 
   # run the whole script or in parts inside "bio.snowcrab/inst/julia/logistic_discrete.jl" for more control
-  
-  aulab ="cfanorth"     # 41 hrs (size struct), 20 min 
+  aulab ="cfanorth"     
   include( joinpath(project_directory, "logistic_discrete.jl" ) )   
 
-  aulab ="cfasouth"     # 65 hrs (size struct), min (logistic_discrete_hist)  
+  aulab ="cfasouth"    
   include( joinpath(project_directory, "logistic_discrete.jl" ) )   
 
-  aulab ="cfa4x"        # 24 hrs (size struct), min (logistic_discrete_hist)
+  aulab ="cfa4x"      
   include( joinpath(project_directory, "logistic_discrete.jl" ) )   
 
 
