--- a/inst/markdown/05.biomass_index_sizestructured_carstm.md
+++ b/inst/markdown/05.biomass_index_sizestructured_carstm.md
@@ -139,7 +139,7 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
   
   carstm_model_label= paste( "default", snowcrab_filter_class, sep="_" )
 
-    pA = parameters_numerical_dynamics( yrs=yrs, snowcrab_filter_class=snowcrab_filter_class,  spec_bio=spec_bio, save_location=save_location ) 
+    pA = parameters_numerical_dynamics( yrs=yrs, snowcrab_filter_class=snowcrab_filter_class,  spec_bio=spec_bio, save_location=carstm_results_directory ) 
     pN = pA$pN
     pW = pA$pW
     pH = pA$pH
@@ -706,12 +706,7 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
             
             # scale_y_continuous( limits=c(0, 300) )  
             ggsave(filename=fn, plot=out, width=12, height = 8)
-      
-
-
-          pN$areal_units_constraint_ntarget = sppoly_tweaks[["areal_units_constraint_ntarget"]][[snowcrab_filter_class]]
-          pN$n_iter_drop = sppoly_tweaks[["n_iter_drop"]][[snowcrab_filter_class]]
-              
+                
           # map it ..mean density
           sppoly=areal_units( p=pN )
 
@@ -758,9 +753,9 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
   
         fishery_model_data_inputs( year.assessment=year.assessment, 
           type="size_structured_numerical_dynamics",
-          for_julia=TRUE, sppoly_tweaks=sppoly_tweaks, 
-          save_location=carstm_results_directory,
-          carstm_results_directory= )
+          for_julia=TRUE, 
+          save_location=carstm_results_directory 
+        )
 #  }
  
 ``` 
