--- a/inst/markdown/05.biomass_index_sizestructured_carstm.md
+++ b/inst/markdown/05.biomass_index_sizestructured_carstm.md
@@ -58,7 +58,7 @@ Prepare aggregated time-series data for inference using a Bayesian fishery model
 # 3  Presence-absence
 # the convolution of all three after simulation is called a Hurdle or Delta model
 # -------------------------------------------------
-  
+  /home/jae/projects/dynamical_model/snowcrab/data/default_M0/carstm_inputs.RDS
 
 # -------------------------------------------------
 # Part 1 -- construct basic parameter list defining the main characteristics of the study
@@ -71,7 +71,7 @@ require(Matrix)
 require(spam)
 
 # save results to a location outside of bio.data as this is not operational (yet) 
-carstm_results_directory = file.path( homedir, "projects", "dynamical_model", "snowcrab", "data" )
+carstm_directory = file.path( homedir, "projects", "dynamical_model", "snowcrab", "data" )
 
 year.assessment = 2023
 yrs = 1999:year.assessment
@@ -81,7 +81,7 @@ p = bio.snowcrab::load.environment( year.assessment=year.assessment )
 spec_bio = bio.taxonomy::taxonomy.recode( from="spec", to="parsimonious", tolookup=2526 )
 
 temperature_figures_redo = FALSE
-areal_units_redo = FALSE
+areal_units_redo = TRUE
     
 assimilate_numbers_and_size = TRUE
 
@@ -138,55 +138,23 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
 
   
   carstm_model_label= paste( "default", snowcrab_filter_class, sep="_" )
+  model_results_directory = file.path(carstm_directory, carstm_model_label)
 
-    pA = parameters_numerical_dynamics( yrs=yrs, snowcrab_filter_class=snowcrab_filter_class,  spec_bio=spec_bio, save_location=carstm_results_directory ) 
-    pN = pA$pN
-    pW = pA$pW
-    pH = pA$pH
-    pA = NULL
-      
-    # params for number
-    pN$theta = theta_init[[snowcrab_filter_class]][["N"]]
-    pW$theta = theta_init[[snowcrab_filter_class]][["W"]]
-    pH$theta = theta_init[[snowcrab_filter_class]][["H"]]
-
-  if (areal_units_redo) {
-    # polygon structure:: create if not yet made
-    # for (au in c("cfanorth", "cfasouth", "cfa4x", "cfaall" )) plot(polygon_managementareas( species="snowcrab", au))
-            
-    xydata = snowcrab.db( p=pN, DS="areal_units_input", redo=TRUE )
-    xydata = snowcrab.db( p=pN, DS="areal_units_input" )
-
-    sppoly = areal_units( p=pN, xydata=xydata[ which(xydata$yr %in% pN$yrs), ], redo=TRUE, verbose=TRUE )  # create constrained polygons with neighbourhood as an attribute
-
-    plot(sppoly["npts"])
-
-    sppoly$dummyvar = ""
-    xydata = st_as_sf( xydata, coords=c("lon","lat") )
-    st_crs(xydata) = st_crs( projection_proj4string("lonlat_wgs84") )
+  pA = parameters_numerical_dynamics( yrs=yrs, snowcrab_filter_class=snowcrab_filter_class,     
+    carstm_model_label= carstm_model_label, spec_bio=spec_bio, carstm_directory=carstm_directory ) 
   
-    tmap_mode("plot")
+  pN = pA$pN
+  pW = pA$pW
+  pH = pA$pH
+  pA = NULL
 
-    require("tmap")
+  sppoly = areal_units( p=pN, areal_units_directory=model_results_directory )
     
-    plt = 
-      tm_shape(sppoly) +
-        tm_borders(col = "slategray", alpha = 0.5, lwd = 0.5) + 
-        tm_shape( xydata ) + tm_sf() +
-        additional_features[["tmap"]] +
-        tm_compass(position = c("right", "TOP"), size = 1.5) +
-        tm_scale_bar(position = c("RIGHT", "BOTTOM"), width =0.1, text.size = 0.5) +
-        tm_layout(frame = FALSE, scale = 2) +
-        tm_shape( st_transform(polygons_rnaturalearth(), st_crs(sppoly) )) + 
-        tm_borders(col = "slategray", alpha = 0.5, lwd = 0.5)
-
-    dev.new(width=14, height=8, pointsize=20)
-    plt
-
-  }
- 
-  sppoly=areal_units( p=pN )
-
+  # params for number
+  pN$theta = theta_init[[snowcrab_filter_class]][["N"]]
+  pW$theta = theta_init[[snowcrab_filter_class]][["W"]]
+  pH$theta = theta_init[[snowcrab_filter_class]][["H"]]
+  
   pN$space_name = sppoly$AUID 
   pN$space_id = 1:nrow(sppoly)  # must match M$space
 
@@ -254,11 +222,7 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
   if ( spatiotemporal_model ) {
 
     # total numbers
-    
-    sppoly=areal_units( p=pN )
-    
-    M = snowcrab.db( p=pN, DS="carstm_inputs", sppoly=sppoly  )  # will redo if not found
-  
+         
     io = which(M$tag=="observations")
     ip = which(M$tag=="predictions")
     iq = unique( c( which( M$totno > 0), ip ) )
@@ -277,6 +241,18 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
       num.threads="4:3"  
     )
 
+    # posterior predictive check
+    carstm_posterior_predictive_check(p=pN, M=M[ iq, ]  )
+ 
+  # EXAMINE POSTERIORS AND PRIORS
+    res = carstm_model(  p=pN, DS="carstm_summary" )  # parameters in p and summary
+
+    names(res$hypers)
+    for (i in 1:length(names(res$hypers)) ){
+      o = carstm_prior_posterior_compare( hypers=res$hypers, all.hypers=res$all.hypers, vn=names(res$hypers)[i] )  
+      dev.new(); print(o)
+    }   
+
     # mean size
     res = NULL; gc()
     res = carstm_model( p=pW, data=M[ iw, ], sppoly = sppoly, 
@@ -289,6 +265,18 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
       verbose=TRUE,
       num.threads="4:3"   
     ) 
+
+    # posterior predictive check
+    carstm_posterior_predictive_check(p=pW, M=M[ iw, ]  )
+
+  # EXAMINE POSTERIORS AND PRIORS
+    res = carstm_model(  p=pW, DS="carstm_summary" )  # parameters in p and summary
+
+    names(res$hypers)
+    for (i in 1:length(names(res$hypers)) ){
+      o = carstm_prior_posterior_compare( hypers=res$hypers, all.hypers=res$all.hypers, vn=names(res$hypers)[i] )  
+      dev.new(); print(o)
+    }   
 
     # model pa using all data
     res = NULL; gc()
@@ -305,6 +293,19 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
     )
     res = NULL; gc()
  
+   
+    # posterior predictive check
+    carstm_posterior_predictive_check(p=pH, M=M[ , ]  )
+
+    # EXAMINE POSTERIORS AND PRIORS
+    res = carstm_model(  p=pH, DS="carstm_summary" )  # parameters in p and summary
+
+    names(res$hypers)
+    for (i in 1:length(names(res$hypers)) ){
+      o = carstm_prior_posterior_compare( hypers=res$hypers, all.hypers=res$all.hypers, vn=names(res$hypers)[i] )  
+      dev.new(); print(o)
+    }     
+  
   }
   
   # end spatiotemporal model
@@ -316,8 +317,6 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
       if ( vns=="number" ) {
         p=pN
         ylab = "Number"
-        outputdir = file.path( p$modeldir, p$carstm_model_label, "predicted.numerical.densities" )
-        if ( !file.exists(outputdir)) dir.create( outputdir, recursive=TRUE, showWarnings=FALSE )
         fn_root_prefix = "Predicted_numerical_abundance"
         fn_root =  "Predicted_numerical_abundance_persistent_spatial_effect" 
         outfilename = file.path( outputdir, paste(fn_root, "png", sep=".") )
@@ -326,8 +325,6 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
       if ( vns=="meansize") {
         p=pW
         ylab = "Mean weight"
-        outputdir = file.path( p$modeldir, p$carstm_model_label, "predicted.meansize" )
-        if ( !file.exists(outputdir)) dir.create( outputdir, recursive=TRUE, showWarnings=FALSE )
         fn_root_prefix = "Predicted_meansize"
         fn_root =  "Predicted_meansize_persistent_spatial_effect" 
         outfilename = file.path( outputdir, paste(fn_root, "png", sep=".") )
@@ -336,8 +333,6 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
       if ( vns=="habitat" ) {
         p=pH
         ylab = "Probability"
-        outputdir = file.path( p$modeldir, p$carstm_model_label, "predicted.presence_absence" )
-        if ( !file.exists(outputdir)) dir.create( outputdir, recursive=TRUE, showWarnings=FALSE )
         fn_root_prefix = "Predicted_presence_absence"
         fn_root =  "Predicted_presence_absence_persistent_spatial_effect" 
         outfilename = file.path( outputdir, paste(fn_root, "png", sep=".") )
@@ -364,25 +359,14 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
       
       }
 
-      res = carstm_model( p=p, DS="carstm_modelled_summary",  sppoly = sppoly ) # to load currently saved results
-
-      plots_from_fit = FALSE
-      if (plots_from_fit) {
-        # extract results
-        fit = carstm_model( p=p, DS="modelled_fit",  sppoly = sppoly )  # extract currently saved model fit
-        fit$summary$dic$dic
-        fit$summary$dic$p.eff
-        plot(fit)
-        plot(fit, plot.prior=TRUE, plot.hyperparameters=TRUE, plot.fixed.effects=FALSE )
-        plot( fit, plot.prior=TRUE, plot.hyperparameters=TRUE, plot.fixed.effects=FALSE )
-        plot( fit$marginals.hyperpar$"Phi for space_time", type="l")  # posterior distribution of phi nonspatial dominates
-        plot( fit$marginals.hyperpar$"Precision for space_time", type="l")
-        plot( fit$marginals.hyperpar$"Precision for setno", type="l")
-        fit = NULL
-      }
+ 
+      outputdir = file.path( p$modeldir, p$carstm_model_label, "figures" )
+      if ( !file.exists(outputdir)) dir.create( outputdir, recursive=TRUE, showWarnings=FALSE )
 
       
       if ( vns=="habitat" ) {
+    
+        res = carstm_model( p=p, DS="carstm_modelled_summary",  sppoly = sppoly ) # to load currently saved results
         habitat_2D = FALSE
         if (habitat_2D) {
         
@@ -478,126 +462,25 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
         }
       }
  
-      # maps
-      res = carstm_model( p=p, DS="carstm_randomeffects",  sppoly = sppoly ) # to load currently saved results
-
-      vn = c(  "space", "re_total" ) 
-      toplot = carstm_results_unpack( res, vn )
-      brks = pretty(  quantile(toplot[,"mean"], probs=c(0,0.975), na.rm=TRUE )  )
-
-      carstm_map(  res=res, vn=vn, 
-        sppoly = sppoly, 
-        breaks = brks,
-        palette="-RdYlBu",
-        plot_elements="",
-        additional_features=additional_features,
-        outfilename=outfilename
-      )  
-        
-
-     res = carstm_model( p=p, DS="carstm_predictions",  sppoly = sppoly ) # to load currently saved results
-
-      vn="predictions"
-      toplot = carstm_results_unpack( res, vn )
-      brks = pretty(  quantile(toplot[,,"mean"], probs=c(0,0.975), na.rm=TRUE )  )
-
-      for (y in res$time_name ){
-        tmatch = as.character(y)
-        fn_root = paste(fn_root_prefix, paste0(tmatch, collapse="-"), sep="_")
-        outfilename = file.path( outputdir, paste(fn_root, "png", sep=".") )
-
-        carstm_map(  res=res, vn=vn, tmatch=tmatch,
-          sppoly = sppoly, 
-          breaks =brks,
-          palette="-RdYlBu",
-          plot_elements="",
-          additional_features=additional_features,
-          title = y, 
-#          title=paste(fn_root_prefix, snowcrab_filter_class,  paste0(tmatch, collapse="-") )
-          outfilename=outfilename
-        )
-        # print(outfilename)
-      
-      }
-
-      # plots with 95% PI
+      # to load currently saved results
       res = carstm_model( p=p,  DS="carstm_summary" )  # parameters in p and direct summary
-      
-      oeffdir = file.path( outputdir, fn_root_prefix, "effects" )
-      if ( !file.exists(oeffdir)) dir.create( oeffdir, recursive=TRUE, showWarnings=FALSE )
-
-      # annual component 
-      res$time$yr = as.numeric(p$time_name[res$time$ID])
-      plt = ggplot( res$time, aes(x=yr, y=mean)) +  geom_line(color="gray", linewidth=1.75) + geom_point( size=3, color="slategray") +
-        geom_errorbar(aes(ymin=quant0.025, ymax=quant0.975), color="slategray",  linewidth=1.0, width=0.5) +
-        labs(title="Annual component", x="Year", y =ylab) +
-        theme_light( base_size=22) 
-      print(plt)    
-      (fn_plt = file.path( oeffdir, "time.png"))
-      ggsave(filename=fn_plt, plot=plt, dpi=144, width=12, height = 8)
-
-      # seasonal component 
-      res$cyclic$seas = as.numeric( p$cyclic_name[res$cyclic$ID] )
-      plt = ggplot( res$cyclic, aes(x=seas, y=mean) ) + geom_line(color="gray", linewidth=1.75) + geom_point( size=3, color="slategray") +
-        geom_errorbar(aes(ymin=quant0.025, ymax=quant0.975), color="slategray",  linewidth=1.0, width=0.05) +
-        labs(title="Seasonal component", x="Year (fraction)", y =ylab) +
-        theme_light( base_size=22) 
-      print(plt)          
-      (fn_plt = file.path( oeffdir, "cyclic.png"))
-      ggsave(filename=fn_plt, plot=plt, dpi=144, width=12, height = 8)
+      res$direct
+      res = NULL; gc()
 
 
-      # relationship with depth
-      vn = "inla.group(z, method = \"quantile\", n = 13)"
-      plt = ggplot( res[[vn]], aes(x=ID, y=mean ))+ geom_line(color="gray", linewidth=1.75) + geom_point( size=3, color="slategray") +
-        geom_errorbar(aes(ymin=quant0.025, ymax=quant0.975), color="slategray",  linewidth=1.0, width=5) +
-        labs(title="Depth component", x="Depth (m)", y =ylab) +
-        theme_light( base_size=22) 
-      print(plt)    
-      (fn_plt = file.path( oeffdir, "depth.png" )) 
-      ggsave(filename=fn_plt, plot=plt, dpi=144, width=12, height = 8)
+      # plots with 95% PI 
+      carstm_plot_marginaleffects( p, outputdir, fn_root ) 
+   
 
+      # maps of some of the results
+      outputdirmap = file.path(p$modeldir, p$carstm_model_label, "maps" )
+       
+      carstm_plot_map( p=p, outputdir=outputdirmap, fn_root_prefix=fn_root_prefix , additional_features=additional_features, 
+        toplot="random_spatial", probs=c(0.025, 0.975) ) 
+   
+      carstm_plot_map( p=p, outputdir=outputdirmap, fn_root_prefix=fn_root_prefix , additional_features=additional_features, 
+        toplot="predictions", probs=c(0.1, 0.9)) 
   
-      vn = "inla.group(t, method = \"quantile\", n = 13)"
-      plt = ggplot( res[[vn]], aes(x=ID, y=mean ))+ geom_line(color="gray", linewidth=1.75) + geom_point( size=3, color="slategray") +
-        geom_errorbar(aes(ymin=quant0.025, ymax=quant0.975), color="slategray",  linewidth=1.0, width=5) +
-        labs(title="Temperature component", x="Bottom temperature (deg C)", y =ylab) +
-        theme_light( base_size=22) 
-      print(plt)    
-      (fn_plt = file.path( oeffdir, "temperature.png")) 
-      ggsave(filename=fn_plt, plot=plt, dpi=144, width=12, height = 8)
-
-
-      vn= "inla.group(pca1, method = \"quantile\", n = 13)" 
-      plt = ggplot( res[[vn]], aes(x=ID, y=mean ))+ geom_line(color="gray", linewidth=1.75) + geom_point( size=3, color="slategray") +
-        geom_errorbar(aes(ymin=quant0.025, ymax=quant0.975), color="slategray",  linewidth=1.0, width=5) +
-        labs(title="PCA1 component", x="PCA1", y =ylab) +
-        theme_light( base_size=22) 
-      print(plt)    
-      (fn_plt = file.path( oeffdir, "pca1.png")) 
-      ggsave(filename=fn_plt, plot=plt, dpi=144, width=12, height = 8)
-
-
-      vn = "inla.group(pca2, method = \"quantile\", n = 13)" 
-      plt = ggplot( res[[vn]], aes(x=ID, y=mean ))+ geom_line(color="gray", linewidth=1.75) + geom_point( size=3, color="slategray") +
-        geom_errorbar(aes(ymin=quant0.025, ymax=quant0.975), color="slategray",  linewidth=1.0, width=5) +
-        labs(title="PCA2 component", x="PCA2", y =ylab) +
-        theme_light( base_size=22) 
-      print(plt)    
-      (fn_plt = file.path( oeffdir, "pca2.png")) 
-      ggsave(filename=fn_plt, plot=plt, dpi=144, width=12, height = 8)
-
-      if (0) {
-        vn = "inla.group(substrate.grainsize, method = \"quantile\", n = 13)"  
-        plt = ggplot( res[[vn]], aes(x=ID, y=mean ))+ geom_line(color="gray", linewidth=1.75) + geom_point( size=3, color="slategray") +
-          geom_errorbar(aes(ymin=quant0.025, ymax=quant0.975), color="slategray",  linewidth=1.0, width=5) +
-          labs(title="Depth component", x="Depth (m)", y =ylab) +
-          theme_light( base_size=22) 
-        print(plt)    
-        (fn_plt = file.path( oeffdir, "substrate.png")) 
-        ggsave(filename=fn_plt, plot=plt, dpi=144, width=12, height = 8)
-      }
- 
  
     }
 
@@ -621,8 +504,7 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
         
           sims = carstm_posterior_simulations( pN=pN, pW=pW, pH=pH, pa_threshold=0.05, qmax=0.99 )
           sims = sims  / 10^6 # 10^6 kg -> kt;; kt/km^2
-
-          
+ 
           SM = aggregate_simulations( 
             sims=sims, 
             sppoly=sppoly, 
@@ -635,7 +517,7 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
           RES= SM$RES
           # RES = aggregate_simulations( fn=carstm_filenames( pN, returnvalue="filename", fn="aggregated_timeseries" ) )$RES
 
-          outputdir = file.path( carstm_results_directory, "aggregated_biomass_timeseries" )
+          outputdir = file.path( carstm_directory, "aggregated_biomass_timeseries" )
 
           if ( !file.exists(outputdir)) dir.create( outputdir, recursive=TRUE, showWarnings=FALSE )
 
@@ -754,7 +636,7 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
         fishery_model_data_inputs( year.assessment=year.assessment, 
           type="size_structured_numerical_dynamics",
           for_julia=TRUE, 
-          save_location=carstm_results_directory 
+          carstm_directory=carstm_directory 
         )
 #  }
  
