override to directory when specified

--- a/inst/markdown/03.biomass_index_carstm.md
+++ b/inst/markdown/03.biomass_index_carstm.md
@@ -550,16 +550,20 @@ The fishery model used for stock assessment is the biomass dynamics model. It is
 
   ## note the output directory .. this is used for the next script
   fishery_model_label = "turing1"
-
-  carstm_results_directory = file.path( pN$modeldir, pN$carstm_model_label, "fishery_model_results", fishery_model_label ) # default
-  
-  fishery_model_data_inputs( year.assessment=year.assessment,  type="biomass_dynamics", for_julia=TRUE, 
-    save_location=carstm_results_directory, fishery_model_label=fishery_model_label  ) 
+ 
+  # saves in carstm_directory = file.path( pN$modeldir, pN$carstm_model_label )
+  fishery_model_data_inputs( 
+    year.assessment=year.assessment,   
+    type="biomass_dynamics", 
+    for_julia=TRUE, 
+    modeldir=pN$modeldir, 
+    fishery_model_label=fishery_model_label  
+  ) 
 
   # for development, save at alternate locations
-  # carstm_results_directory = file.path( homedir, "projects", "dynamical_model", "snowcrab", "data" )
-  # fishery_model_data_inputs( year.assessment=year.assessment,  type="biomass_dynamics", for_julia=TRUE, save_location=carstm_results_directory )
+  # modeldir = file.path( homedir, "projects", "dynamical_model", "snowcrab", "data" ) 
 
+  
 ```
 
 Rdata files are ready to load through Julia. Continue to step [04.snowcrab_fishery_model_turing.md](04.snowcrab_fishery_model_turing.md) to complete the assessment.
