--- a/inst/markdown/04.snowcrab_fishery_model_turing.md
+++ b/inst/markdown/04.snowcrab_fishery_model_turing.md
@@ -61,19 +61,26 @@ Here we read in these results and prepare (format) them for timeseries analysis.
   p = bio.snowcrab::load.environment( year.assessment=year.assessment )
   modeldir = p$modeldir
   snowcrab_filter_class = "fb"     # fishable biomass (including soft-shelled )  "m.mat" "f.mat" "imm"
+
   carstm_model_label = paste( "default", snowcrab_filter_class, sep="_" )
   fishery_model_label = "turing1"
-  carstm_results_directory = file.path( modeldir, carstm_model_label, "fishery_model_results", fishery_model_label ) # default
-  
-  fishery_model_data_inputs( year.assessment=year.assessment,  type="biomass_dynamics", for_julia=TRUE, 
-    save_location=carstm_results_directory, fishery_model_label=fishery_model_label  ) 
+ 
+  # save to : carstm_directory = file.path(modeldir, carstm_model_label)
+
+  fishery_model_data_inputs( 
+    year.assessment=year.assessment,  
+    type="biomass_dynamics", 
+    for_julia=TRUE, 
+    modeldir=modeldir, 
+    carstm_model_label = carstm_model_label,
+    fishery_model_label=fishery_model_label  
+  ) 
 
   # the name/location of the above creates a data file (which will be passed to Julia, later) 
-  fndat  = file.path( carstm_results_directory, "biodyn_biomass.RData" )  # 
+  fndat  = file.path( modeldir, carstm_model_label, "biodyn_biomass.RData" )  # 
 
   # for development, save at alternate locations
-  # carstm_results_directory = file.path( homedir, "projects", "dynamical_model", "snowcrab", "data" )
-  # fishery_model_data_inputs( year.assessment=year.assessment,  type="biomass_dynamics", for_julia=TRUE, save_location=carstm_results_directory )
+  # modeldir = file.path( homedir, "projects", "dynamical_model", "snowcrab", "data" ) 
 
 ```
 
