--- a/inst/markdown/05.biomass_index_sizestructured_carstm.md
+++ b/inst/markdown/05.biomass_index_sizestructured_carstm.md
@@ -58,8 +58,7 @@ Prepare aggregated time-series data for inference using a Bayesian fishery model
 # 3  Presence-absence
 # the convolution of all three after simulation is called a Hurdle or Delta model
 # -------------------------------------------------
-  /home/jae/projects/dynamical_model/snowcrab/data/default_M0/carstm_inputs.RDS
-
+ 
 # -------------------------------------------------
 # Part 1 -- construct basic parameter list defining the main characteristics of the study
 
@@ -71,7 +70,7 @@ require(Matrix)
 require(spam)
 
 # save results to a location outside of bio.data as this is not operational (yet) 
-carstm_directory = file.path( homedir, "projects", "dynamical_model", "snowcrab", "data" )
+modeldir = file.path( homedir, "projects", "dynamical_model", "snowcrab", "data" )
 
 year.assessment = 2023
 yrs = 1999:year.assessment
@@ -138,17 +137,20 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
 
   
   carstm_model_label= paste( "default", snowcrab_filter_class, sep="_" )
-  model_results_directory = file.path(carstm_directory, carstm_model_label)
+  carstm_directory = file.path( modeldir, carstm_model_label)
 
-  pA = parameters_numerical_dynamics( yrs=yrs, snowcrab_filter_class=snowcrab_filter_class,     
-    carstm_model_label= carstm_model_label, spec_bio=spec_bio, carstm_directory=carstm_directory ) 
+  pA = parameters_numerical_dynamics( yrs=yrs,  
+    snowcrab_filter_class=snowcrab_filter_class,     
+    spec_bio=spec_bio, 
+    carstm_model_label= carstm_model_label, 
+    modeldir=modeldir ) 
   
   pN = pA$pN
   pW = pA$pW
   pH = pA$pH
   pA = NULL
 
-  sppoly = areal_units( p=pN, areal_units_directory=model_results_directory )
+  sppoly = areal_units( p=pN, areal_units_directory=carstm_directory )
     
   # params for number
   pN$theta = theta_init[[snowcrab_filter_class]][["N"]]
@@ -220,9 +222,7 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
   # Part 2 -- spatiotemporal statistical model
   spatiotemporal_model = TRUE
   if ( spatiotemporal_model ) {
-
-    # total numbers
-         
+ 
     io = which(M$tag=="observations")
     ip = which(M$tag=="predictions")
     iq = unique( c( which( M$totno > 0), ip ) )
@@ -240,6 +240,7 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
       verbose=TRUE,
       num.threads="4:3"  
     )
+    graphics.off()
 
     # posterior predictive check
     carstm_posterior_predictive_check(p=pN, M=M[ iq, ]  )
@@ -265,6 +266,7 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
       verbose=TRUE,
       num.threads="4:3"   
     ) 
+    graphics.off()
 
     # posterior predictive check
     carstm_posterior_predictive_check(p=pW, M=M[ iw, ]  )
@@ -292,7 +294,7 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
       num.threads="4:3"  
     )
     res = NULL; gc()
- 
+    graphics.off()
    
     # posterior predictive check
     carstm_posterior_predictive_check(p=pH, M=M[ , ]  )
@@ -461,7 +463,8 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
             
         }
       }
- 
+      graphics.off()
+
       # to load currently saved results
       res = carstm_model( p=p,  DS="carstm_summary" )  # parameters in p and direct summary
       res$direct
@@ -481,6 +484,7 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
       carstm_plot_map( p=p, outputdir=outputdirmap, fn_root_prefix=fn_root_prefix , additional_features=additional_features, 
         toplot="predictions", probs=c(0.1, 0.9)) 
   
+      graphics.off()
  
     }
 
@@ -499,7 +503,7 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
         # wgts_max = 1.1 # kg, hard upper limit
         # N_max = NULL
         # #  quantile( M$totno[ipositive]/M$data_offset[ipositive], probs=0.95, na.rm=TRUE )  
-        
+            
         # posterior sims 
         
           sims = carstm_posterior_simulations( pN=pN, pW=pW, pH=pH, pa_threshold=0.05, qmax=0.99 )
@@ -590,7 +594,6 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
             ggsave(filename=fn, plot=out, width=12, height = 8)
                 
           # map it ..mean density
-          sppoly=areal_units( p=pN )
 
           vn = paste("biomass", "predicted", sep=".")
 
@@ -622,6 +625,8 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
           }
       }
 
+      graphics.off()
+
     }  # end assimilate size and numbers
 
   }  # end for loop categories
@@ -630,13 +635,16 @@ for (snowcrab_filter_class in c(  "M0", "M1", "M2", "M3", "M4", "f.mat" ) ) {
 
 # if prepping data for continuous version (julia): 
 #   if (grepl("size_structured", model_variation)) {
+      
       # fishery landings has a weekly time step = 2/52 ~ 0.0385 ~ 0.04  X dt=0.01 seems to work best
-        # save directory is defined at the start:
-  
-        fishery_model_data_inputs( year.assessment=year.assessment, 
+      
+      # save to: carstm_directory = file.path(modeldir, carstm_model_label) 
+      
+        fishery_model_data_inputs( 
+          year.assessment=year.assessment, 
           type="size_structured_numerical_dynamics",
           for_julia=TRUE, 
-          carstm_directory=carstm_directory 
+          modeldir=modeldir          
         )
 #  }
  
