fix sppoly load location issue

--- a/inst/markdown/03.biomass_index_carstm.md
+++ b/inst/markdown/03.biomass_index_carstm.md
@@ -549,15 +549,16 @@ The fishery model used for stock assessment is the biomass dynamics model. It is
 ```r
 
   ## note the output directory .. this is used for the next script
-  fishery_model_label = "turing1"
  
   # saves in carstm_directory = file.path( pN$modeldir, pN$carstm_model_label )
   fishery_model_data_inputs( 
     year.assessment=year.assessment,   
     type="biomass_dynamics", 
-    for_julia=TRUE, 
+    snowcrab_filter_class="fb"
     modeldir=pN$modeldir, 
-    fishery_model_label=fishery_model_label  
+    carstm_model_label=carstm_model_label,
+    for_julia=TRUE,
+    fishery_model_label="turing1"  
   ) 
 
   # for development, save at alternate locations
