--- a/inst/markdown/03.biomass_index_carstm.md
+++ b/inst/markdown/03.biomass_index_carstm.md
@@ -554,7 +554,7 @@ The fishery model used for stock assessment is the biomass dynamics model. It is
   fishery_model_data_inputs( 
     year.assessment=year.assessment,   
     type="biomass_dynamics", 
-    snowcrab_filter_class="fb"
+    snowcrab_filter_class="fb",
     modeldir=pN$modeldir, 
     carstm_model_label=carstm_model_label,
     for_julia=TRUE,
